# ai-report

./: .gitignore  CLAUDE.md  config.example.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  quarterly-audit.yml
src/stock_auditor/: __init__.py  __main__.py  audit.py  browser.py  captcha.py  config.py  email_sender.py  login.py  main.py  quarter.py
tests/: conftest.py  test_audit.py  test_captcha.py  test_config.py  test_email_sender.py  test_login.py  test_main.py  test_quarter.py
